--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-      <link rel="stylesheet" href="styles/transport-font/style.css">
+      <link rel="stylesheet" href="styles/style.css">
     <!-- endbuild -->
   </head>
 
